[package]
name = "packet-stream"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Implementation of the packet-stream multiplexing protocol in Rust."
repository = "https://github.com/AljoschaMeyer/packet-stream-rs"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
futures = "0.1.17"
tokio-io = "0.1.4"
atm-io-utils = "0.1.0"
atm-async-utils = "0.1.1"
void = "1.0.2"
multi-producer-sink = "0.1.1"
multi-consumer-stream = "0.2.1"

[dev-dependencies]
partial-io = { version = "0.2.5", features = ["quickcheck", "tokio"] }
quickcheck = "0.4.1"
async-ringbuffer = "0.1.0"
rand = "0.3.18"