[package]
name = "packet-stream"
version = "0.7.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Implementation of the packet-stream multiplexing protocol in Rust."
repository = "https://github.com/AljoschaMeyer/packet-stream-rs"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
atm-async-utils = "0.2.1"
futures-core = "0.2.0-alpha"
futures-io = "0.2.0-alpha"
futures-sink = "0.2.0-alpha"
futures-util = "0.2.0-alpha"
multi-producer-sink = "0.4.0"
multi-consumer-stream = "0.4.0"
packet-stream-codec = "0.2.0"

[dev-dependencies]
futures = "0.2.0-alpha"
async-ringbuffer = "0.3.0"
